<resources>
    <string name="app_name">Movie Rating</string>
    <string name="button_go">GO</string>
    <string name="no_data_found">No Data Found</string>
    <string name="network_error">Please check your internet connection</string>
    <string name="overview">Overview</string>
    <string name="keyword_error">Please enter keyword</string>
    <string name="vote">Votes</string>
    <string name="rating">Rating</string>
    <string name="story">The family-friendly movie explores the transformational role prayer plays in the lives of the Jordan family. Tony and Elizabeth Jordan, a middle-class couple who seemingly have it all – great jobs, a beautiful daughter, their dream home. But appearances can be deceiving. In reality, the Jordan’s marriage has become a war zone and their daughter is collateral damage. With the help of Miss Clara, an older, wiser woman, Elizabeth discovers she can start fighting for her family instead of against them. Through a newly energized faith, Elizabeth and Tony’s real enemy doesn’t have a prayer.</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="english">English</string>
    <string name="default_keyword">Star</string>
</resources>